Freestyle loading unneeded collections #60669

Closed
opened 2019-01-20 13:43:51 +01:00 by Dong-Hyun Kim · 5 comments
Member

System Information
Operating system: Windows 10 64-bit
Graphics card: NVIDIA Geforce GTX 960M

Blender Version
Broken: 2.80 ad707115d5 2019-01-17
Worked: (Cannot be solved by the user)

Blender 2.80 loads unneeded collections, which are marked as set indirect only and set holdout to the view layer.

Exact steps for others to reproduce the error
This file has view layer A and collection B, C, D in it. C and D are made up of millions of polygons and is very heavy. B is very light and low-poly.
In View Layer A, I marked collection C as set indirect only and D as set holdout inside the outliner editor. However at the final part of the rendering, freestyle was loading mesh for a very long time and it turned out that the freestyle was trying to load B, C, D instead of just B.

Set exclude works fine with freestyle. It doesn't load collections marked as set exclude. However it does load set indirect and set holdout collections, which is obviously unnecessary and takes up our precious time. Sometimes like this it makes blender unresponsive if the unnecessary mesh is too heavy.

This needs to be fixed since some of us users are using workflow that is related to cartoons and have to draw lines on only parts of the scene.untitled.blend

**System Information** Operating system: Windows 10 64-bit Graphics card: NVIDIA Geforce GTX 960M **Blender Version** Broken: 2.80 ad707115d5bc 2019-01-17 Worked: (Cannot be solved by the user) Blender 2.80 loads unneeded collections, which are marked as **set indirect only** and **set holdout** to the view layer. **Exact steps for others to reproduce the error** This file has view layer A and collection B, C, D in it. C and D are made up of millions of polygons and is very heavy. B is very light and low-poly. In View Layer A, I marked collection C as **set indirect only** and D as **set holdout** inside the outliner editor. However at the final part of the rendering, freestyle was loading mesh for a very long time and it turned out that the freestyle was trying to load B, C, D instead of just B. **Set exclude** works fine with freestyle. It doesn't load collections marked as **set exclude**. However it does load **set indirect** and **set holdout** collections, which is obviously unnecessary and takes up our precious time. Sometimes like this it makes blender unresponsive if the unnecessary mesh is too heavy. This needs to be fixed since some of us users are using workflow that is related to cartoons and have to draw lines on only parts of the scene.[untitled.blend](https://archive.blender.org/developer/F6347062/untitled.blend)
Author
Member

Added subscriber: @temeddix

Added subscriber: @temeddix
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by 391e35d5a0

This issue was referenced by 391e35d5a0e5185f714278d2717381a47ae54d4e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60669
No description provided.