Fix T60669: freestyle rendering holdout / indirect only collections.

To match Cycles we can hide freestyle lines for these.